--- a/components/NoteForm/NoteForm.module.css
+++ b/components/NoteForm/NoteForm.module.css
@@ -1,7 +1,16 @@
 .form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 16px;
+}
+.createCard {
+  max-width: 500px;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 24px;
+  text-align: left;
 }
 
 .formGroup {
@@ -16,6 +25,7 @@
 .textarea,
 .select {
   margin-top: 4px;
+  margin-bottom: 16px;
   padding: 8px 12px;
   font-size: 14px;
   border: 1px solid #ced4da;
